--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta property="og:title" content="Islimi Jewelry" />
+  <meta property="og:image" content="https://karal.az/islimilogo2.png" />
   <title>Kataloq</title>
   <style>
     :root {
