--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
       <a href="#yeni">Yeni</a>
       <a href="#üzük">Üzüklər</a>
       <a href="#qolbaq">Qolbaqlar</a>
-      <a href="#boyunbağı">Boyunbağlar</a>
+      <a href="#boyunbağı">Boyunbağllar</a>
     </div>
   </div>
 
