--- a/upload.html
+++ b/upload.html
@@ -21,7 +21,7 @@
       e.preventDefault();
       const formData = new FormData(form);
 
-      const res = await fetch("https://YOUR_WORKER_NAME.YOUR_SUBDOMAIN.workers.dev", {
+      const res = await fetch("https://video.islimi.az", {
         method: "POST",
         body: formData
       });
