--- a/upload.html
+++ b/upload.html
@@ -1,17 +1,49 @@
 <!DOCTYPE html>
 <html lang="az">
 <head>
-  <meta charset="UTF-8">
-  <title>Fayl Yüklə</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Fayl Yükləmə</title>
+  <style>
+    body {
+      font-family: sans-serif;
+      padding: 40px;
+      background: #f9f9f9;
+    }
+    .upload-container {
+      background: white;
+      padding: 20px;
+      max-width: 400px;
+      margin: auto;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+      border-radius: 10px;
+    }
+    input[type="file"] {
+      margin-bottom: 10px;
+    }
+    button {
+      background-color: #0070f3;
+      color: white;
+      padding: 10px 20px;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+    }
+    #result {
+      margin-top: 20px;
+    }
+  </style>
 </head>
 <body>
-  <h2>Video yüklə</h2>
-  <form id="uploadForm">
-    <input type="file" name="file" required>
-    <button type="submit">Yüklə</button>
-  </form>
-
-  <div id="result" style="margin-top:20px;"></div>
+  <div class="upload-container">
+    <h2>Videonu yüklə</h2>
+    <form id="uploadForm">
+      <input type="file" name="file" required />
+      <br />
+      <button type="submit">Yüklə</button>
+    </form>
+    <div id="result"></div>
+  </div>
 
   <script>
     const form = document.getElementById('uploadForm');
@@ -19,19 +51,28 @@
 
     form.addEventListener('submit', async (e) => {
       e.preventDefault();
+      result.innerHTML = "Yüklənir...";
+
       const formData = new FormData(form);
 
-      const res = await fetch("https://video.islimi.az", {
-        method: "POST",
-        body: formData
-      });
+      try {
+        const res = await fetch("https://video.islimi.az", {
+          method: "POST",
+          body: formData
+        });
 
-      const json = await res.json();
-      if (json.success) {
-        result.innerHTML = `<p>Uğurla yükləndi:</p>
-          <a href="${json.url}" target="_blank">${json.url}</a>`;
-      } else {
-        result.textContent = "Yükləmə zamanı xəta baş verdi.";
+        const json = await res.json();
+
+        if (json.success) {
+          result.innerHTML = `
+            <p>✅ Uğurla yükləndi:</p>
+            <a href="${json.url}" target="_blank">${json.url}</a>
+          `;
+        } else {
+          result.innerHTML = `<p style="color:red;">Xəta: ${json.message}</p>`;
+        }
+      } catch (err) {
+        result.innerHTML = `<p style="color:red;">Yükləmə alınmadı. ${err.message}</p>`;
       }
     });
   </script>
