--- a/upload.html
+++ b/upload.html
@@ -45,36 +45,39 @@
     <div id="result"></div>
   </div>
 
-  <script>
-    const form = document.getElementById('uploadForm');
-    const result = document.getElementById('result');
+ <form id="uploadForm">
+  <input type="file" name="file" required />
+  <button type="submit">Yüklə</button>
+</form>
+<div id="result" style="margin-top:20px;"></div>
 
-    form.addEventListener('submit', async (e) => {
-      e.preventDefault();
-      result.innerHTML = "Yüklənir...";
+<script>
+  const form = document.getElementById('uploadForm');
+  const result = document.getElementById('result');
 
-      const formData = new FormData(form);
+  form.addEventListener('submit', async (e) => {
+    e.preventDefault();
+    const formData = new FormData(form);
 
-      try {
-        const res = await fetch("https://video.islimi.az", {
-          method: "POST",
-          body: formData
-        });
+    try {
+      const res = await fetch('https://video.islimi.az', {
+        method: 'POST',
+        body: formData,
+      });
 
-        const json = await res.json();
+      const json = await res.json();
 
-        if (json.success) {
-          result.innerHTML = `
-            <p>✅ Uğurla yükləndi:</p>
-            <a href="${json.url}" target="_blank">${json.url}</a>
-          `;
-        } else {
-          result.innerHTML = `<p style="color:red;">Xəta: ${json.message}</p>`;
-        }
-      } catch (err) {
-        result.innerHTML = `<p style="color:red;">Yükləmə alınmadı. ${err.message}</p>`;
+      if (json.success) {
+        result.innerHTML = `<p>Uğurla yükləndi:</p>
+          <a href="${json.url}" target="_blank">${json.url}</a>`;
+      } else {
+        result.innerHTML = `<p>Yükləmə alınmadı: ${json.message}</p>`;
       }
-    });
-  </script>
+    } catch (err) {
+      result.innerHTML = `<p>Yükləmə alınmadı. ${err.message}</p>`;
+      console.error(err);
+    }
+  });
+</script>
 </body>
 </html>
