--- a/upload.html
+++ b/upload.html
@@ -57,8 +57,8 @@
 
 <script>
 const R2_BUCKET = "video";
-const ACCOUNT_ID = "ТВОЙ_ACCOUNT_ID";
-const API_TOKEN = "ТВОЙ_API_TOKEN";
+const ACCOUNT_ID = "c341c05b086ff00698a603024af4e330";
+const API_TOKEN = "jAtw5UODcOFkWGlYGuaHwaxGVMhfDXo6YlFLew6_";
 
 async function upload() {
   const file = document.getElementById("fileInput").files[0];
