--- a/upload.html
+++ b/upload.html
@@ -29,7 +29,7 @@
       border-radius: 5px;
       cursor: pointer;
     }
-    #result {
+    #status {
       margin-top: 20px;
     }
   </style>
@@ -37,28 +37,16 @@
 <body>
   <div class="upload-container">
     <h2>Videonu yüklə</h2>
-    <form id="uploadForm">
-      <input type="file" name="file" required />
-      <br />
-      <button type="submit">Yüklə</button>
-    </form>
-    <div id="result"></div>
+    <input type="file" id="fileInput" />
+    <br />
+    <button onclick="upload()">Yüklə</button>
+    <p id="status"></p>
   </div>
 
- <form id="uploadForm">
-  <input type="file" name="file" required />
-  <button type="submit">Yüklə</button>
-</form>
-<div id="result" style="margin-top:20px;"></div>
-
-<input type="file" id="fileInput" />
-<button onclick="upload()">Yüklə</button>
-<p id="status"></p>
-
 <script>
-const R2_BUCKET = "video";
-const ACCOUNT_ID = "c341c05b086ff00698a603024af4e330";
-const API_TOKEN = "jAtw5UODcOFkWGlYGuaHwaxGVMhfDXo6YlFLew6_";
+const R2_BUCKET = "islimi"; // ← имя бакета
+const ACCOUNT_ID = "c341c05b086ff00698a603024af4e330"; // ← твой Account ID
+const API_TOKEN = "jAtw5UODcOFkWGlYGuaHwaxGVMhfDXo6YlFLew6_"; // ← сюда вставь сгенерированный токен
 
 async function upload() {
   const file = document.getElementById("fileInput").files[0];
@@ -70,27 +58,30 @@ async function upload() {
   }
 
   const fileName = `${Date.now()}-${file.name}`;
-
   const url = `https://api.cloudflare.com/client/v4/accounts/${ACCOUNT_ID}/r2/buckets/${R2_BUCKET}/objects/${fileName}`;
 
-  status.textContent = "Yüklənir...";
+  status.textContent = "⏳ Yüklənir...";
 
-  const res = await fetch(url, {
-    method: "PUT",
-    headers: {
-      "Authorization": `Bearer ${API_TOKEN}`,
-      "Content-Type": file.type
-    },
-    body: file
-  });
+  try {
+    const res = await fetch(url, {
+      method: "PUT",
+      headers: {
+        "Authorization": `Bearer ${API_TOKEN}`,
+        "Content-Type": file.type
+      },
+      body: file
+    });
 
-  const link = `https://${R2_BUCKET}.${ACCOUNT_ID}.r2.cloudflarestorage.com/${fileName}`;
+    if (!res.ok) {
+      const err = await res.json();
+      status.textContent = "❌ Xəta: " + (err?.errors?.[0]?.message || "naməlum");
+      return;
+    }
 
-  if (res.ok) {
-    status.innerHTML = `✅ <a href="${link}" target="_blank">Fayl yükləndi</a>`;
-  } else {
-    const err = await res.json();
-    status.textContent = "❌ Xəta: " + (err?.errors?.[0]?.message || "naməlum");
+    const publicUrl = `https://${R2_BUCKET}.${ACCOUNT_ID}.r2.cloudflarestorage.com/${fileName}`;
+    status.innerHTML = `✅ <a href="${publicUrl}" target="_blank">Fayl yükləndi</a>`;
+  } catch (err) {
+    status.textContent = "❌ Xəta: " + err.message;
   }
 }
 </script>
